--- a/report.Rmd
+++ b/report.Rmd
@@ -4,6 +4,7 @@ author: "Eric Sartor"
 date: "`r Sys.Date()`"
 header-includes:
   - \usepackage[numbers,sort&compress]{natbib}
+  - \usepackage{setspace}
   - \DeclareMathOperator{\norm}{norm}
 output: pdf_document
 bibliography: bibliography.bib
@@ -201,14 +202,14 @@ rm(json_lines)
 ## Methods
 
 ### Preliminary Work Motivating the Model
-
+\doublespacing
   Unless otherwise specified, all analyses were performed using the R language @rcoreteamLanguageEnvironmentStatistical2023. 
-Firstly, a raster containing the population difference between 1300AD and 1400AD was computed. This raster, visible in Figure (???), is variously referred to in this report as the "death raster", or "population difference raster". It represents the loss or gain in population count in each cell over the 14th century as estimated by the HYDE. One would normally expect wholesale population growth, but as a result of the devastation wrought by the Second Pandemic, the population difference raster is mostly negative, with population gain generally only in more remote regions. 
+Firstly, a raster containing the population difference between 1300AD and 1400AD was computed. This raster, visible in Figure \@ref(fig:death_raster), is variously referred to in this report as the "death raster", or "population difference raster". It represents the loss or gain in population count in each cell over the 14th century as estimated by the HYDE. One would normally expect wholesale population growth, but as a result of the devastation wrought by the Second Pandemic, the population difference raster is mostly negative, with population gain generally only in more remote regions. 
 As a result of this, and given the generally small magnitude of the population gain, a model purely estimating deaths rather than attempting to include population gain as well was used to massively simplify the required calculation.
+\singlespacing
+  Next, in order to assess sanity of the outbreak data, as well as its correlation with the HYDE estimates, Poisson point process methods were used to generate an intensity (points per unit area) estimate for the outbreak data as a function of the death raster. Specifically, the outbreak data preceding 1400AD was interpreted as a single Poisson point process, and a nonparametric intensity estimate was taken through `spatstat`'s `rhohat` function @baddeleySpatstatPackageAnalyzing2005. Then, a raster was computed depicting the predicted intensity at every cell in the death raster, resulting in Figure \ref(fig:predicted_intensity_through_rhohat). This informed the usage of the outbreak data in general, providing confidence that it was correlated with deaths. Further, some authors cast doubt upon the usefulness of the Schmid et al. data, stating that it may be missing key outbreaks in Europe, as the intensity of the points in Northern Italy in their opinion did not align with other historical accounts @roosenDangersNoncriticalUse2018. This nonparametric analysis, however, finds a high intensity in the allegedly problematic regions, providing confidence that the usage of the outbreak data is not detrimental to the legitimacy of any results.
 
-  Next, in order to assess sanity of the outbreak data, as well as its correlation with the HYDE estimates, Poisson point process methods were used to generate an intensity (points per unit area) estimate for the outbreak data as a function of the death raster. Specifically, the outbreak data preceding 1400AD was interpreted as a single Poisson point process, and a nonparametric intensity estimate was taken through `spatstat`'s `rhohat` function @baddeleySpatstatPackageAnalyzing2005. Then, a raster was computed depicting the predicted intensity at every cell in the death raster, resulting in Figure (???). This informed the usage of the outbreak data in general, providing confidence that it was correlated with deaths. Further, some authors cast doubt upon the usefulness of the Schmid et al. data, stating that it may be missing key outbreaks in Europe, as the intensity of the points in Northern Italy in their opinion did not align with other historical accounts @roosenDangersNoncriticalUse2018. This nonparametric analysis, however, finds a high intensity in the allegedly problematic regions, providing confidence that the usage of the outbreak data is not detrimental to the legitimacy of any results.
-
-  Additionally, it is significant that the death raster is quite similar to the population density raster for the year 1300AD, as the population difference raster is generated only using population count data: this explicitly points to population density as a key factor in the relationship. In order to further assess the nature of the relationship between population density and population difference, focal correlation between the two rasters was assessed using the `focalPairs` function available through `terra` @hijmansTerraSpatialData2023, and is visible in Figure (???). While a negative correlation between population density and population growth was expceted, the positive correlation found in some regions indicates that difficult-to-model factors such as migration may be present. (SAY more about this?) 
+  Additionally, it is significant that the death raster is quite similar to the population density raster for the year 1300AD, as the population difference raster is generated only using population count data: this explicitly points to population density as a key factor in the relationship. In order to further assess the nature of the relationship between population density and population difference, focal correlation between the two rasters was assessed using the `focalPairs` function available through `terra` @hijmansTerraSpatialData2023, and is visible in Figure \@ref(fig:focal_correlation_between_deaths_and_popd). While a negative correlation between population density and population growth was expected, the positive correlation found in some regions indicates that difficult-to-model factors such as migration may be present. (SAY more about this?) 
 
 
 ### Deterministic Model
@@ -229,7 +230,7 @@ It is also crucial to note that $dens_{rast}$ is not normalized, thus cells with
   
   With all this complete, $I$ is multiplied by $mortality$ in order to approximate the number of those infected who will die; for this simulation, the scalar value $0.8 = mortality$ is used. This 80% mortality rate is based upon various estimates of the average contemporary mortality across all forms of the disease [@Pechous.etalPneumonicPlagueDarker2016; @EvansPneumonicPlagueIncidence2022; @Dean.etalHumanEctoparasitesSpread2018; @TotaroSufferingParadiseBubonic2005; @CohnEpidemiologyBlackDeath2008]. $mortality$ was initially tested with multiple values, but as it seemed have very little impact upon the result, and greatly expanded the search space, it was instead set to a scalar value to save computation time. In any case, the resulting raster, $D$, represents only the dead individuals from the outbreak year currently being analysed, _not_ the cumulative number of deaths over the entire epidemic, as it is based on the instantaneous $I$. All yearly $D$ rasters must be summed at the end of recursion in order to compute a total estimate. $R$, or the raster of recovered individuals for the year, is also calculated by $I - D$.
 
-  The algorithm is run until final year is reached. Then, all rasters $D$ and $R$ are summed respectively to $D_{total}$ and $R_{total}$, estimates for the total number of deaths and recoveries per cell over the entire 14th century. The correlation between these approximations and the values estimated in the HYDE are also computed. In the case of the estimated death number, correlation is measured against the inversely-signed population difference raster, as deaths in that raster are represented by a negative number, but this model can only produce positive numbers. The correlation between the population count in 1400AD and the model's final population estimate raster $A$, which is computed by $A = S_{final} + R_{total}$, is also tracked. The grid search is run to completion, with all unique combinations of the $m$, $a$, $x$, and $s$ parameters, and the models correlation between expected and actual values for both deaths and population are selected and displayed, visible in Figure (???), and in Figure (???). The predicted 1400AD rasters for remaining population and deaths are Figure (???) and Figure (???), respectively, with the HYDE estimates side-by-side for comparison. Additionally, snapshots of key years of the epidemic as predicted in the best deaths submodel are also included in Figure (???).
+  The algorithm is run until final year is reached. Then, all rasters $D$ and $R$ are summed respectively to $D_{total}$ and $R_{total}$, estimates for the total number of deaths and recoveries per cell over the entire 14th century. The correlation between these approximations and the values estimated in the HYDE are also computed. In the case of the estimated death number, correlation is measured against the inversely-signed population difference raster, as deaths in that raster are represented by a negative number, but this model can only produce positive numbers. The correlation between the population count in 1400AD and the model's final population estimate raster $A$, which is computed by $A = S_{final} + R_{total}$, is also tracked. The grid search is run to completion, with all unique combinations of the $m$, $a$, $x$, and $s$ parameters, and the submodel correlations between expected and actual values for both deaths and population are selected and displayed, visible in Figure \@ref(fig:top_correlation_chart_D), and in Figure \@ref(fig:top_correlation_chart_A). The predicted 1400AD rasters for deaths and remaining population are Figure \@ref(fig:best_model_result_D) and Figure \@ref(fig:best_model_result_A), respectively, with the HYDE estimates side-by-side for comparison. Additionally, snapshots of key years of the epidemic as predicted in the best deaths submodel are also included in Figure \@ref(???) within the non-technical summary.
 
 
 ```{r death_raster, echo=FALSE, fig.cap="The Population Difference Raster, or \"Death Raster\""}
@@ -263,7 +264,7 @@ tm_shape(basemap) + tm_rgb(alpha = 0.8) + tm_shape(death_raster, raster.downsamp
 
 ### Preliminary Work Results
 
-  While the resultant models themselves are the key focus of this report, the preliminary work also yielded some interesting results worthy of discussion. The focal correlation plot generated for Figure (???) is primarily reassuring due to the large swathe of reasssuringly negatively correlated space, however the areas which are positively correlated are also interesting and point to additional conclusions that can be gleaned from the data. Major cities of such as Paris, Berlin, and Vienna are counterintuitively strongly _positively_ correlated with population difference. In other words: despite being dense urban areas, they seemed to experience relative growth in contrast to other major cities of the time which were strongly negatively correlated, like London, Munich, or Milan. This could point to a pattern of migration into urban areas from less-affected rural communities as a result of the severe and abrupt population shock [@DorseyArmstrongHowPolandMilan2021; @Siuda.SundeDiseaseDemographicDevelopment2021; @Jedwab.etalPandemicsPlacesPopulations2019]. This phenomenon is of immense interest to anthropologists, especially those interested in human movement and the dramatic societal and cultural shifts that manifested in the regions where this positive correlation is present shortly after the most devastating years of plague had passed @A.D.A.M.Inc.Plague. Unfortunately, the methods utilized in this paper are not robust enough to make predictions about this phenomenon, though it presents a promising avenue for future work. 
+  While the resultant models themselves are the key focus of this report, the preliminary work also yielded some interesting results worthy of discussion. The focal correlation plot generated for Figure \@ref(fig:focal_correlation_between_deaths_and_popd) is primarily reassuring due to the large swathe of reasssuringly negatively correlated space, however the areas which are positively correlated are also interesting and point to additional conclusions that can be gleaned from the data. Major cities of such as Paris, Berlin, and Vienna are counterintuitively strongly _positively_ correlated with population difference. In other words: despite being dense urban areas, they seemed to experience relative growth in contrast to other major cities of the time which were strongly negatively correlated, like London, Munich, or Milan. This could point to a pattern of migration into urban areas from less-affected rural communities as a result of the severe and abrupt population shock [@DorseyArmstrongHowPolandMilan2021; @Siuda.SundeDiseaseDemographicDevelopment2021; @Jedwab.etalPandemicsPlacesPopulations2019]. This phenomenon is of immense interest to anthropologists, especially those interested in human movement and the dramatic societal and cultural shifts that manifested in the regions where this positive correlation is present shortly after the most devastating years of plague had passed @A.D.A.M.Inc.Plague. Unfortunately, the methods utilized in this paper are not robust enough to make predictions about this phenomenon, though it presents a promising avenue for future work. 
 
 
 ```{r focal_correlation_between_deaths_and_popd, echo=FALSE, fig.cap='Pop. Dens. and Pop. Diff. Spatial Focal Correlation'}
@@ -346,13 +347,13 @@ target_years = all_target_years[which(all_target_years$year > 1345 &
 recorded_years = unique(target_years$year)
 first_year = recorded_years[1]
 
-d_smoothing = c(0.2, 0.6, 0.8) #size of the region extremely close to 1.0 in distance raster
+d_smoothing = c(0.2)#, 0.6, 0.8) #size of the region extremely close to 1.0 in distance raster
 
 d_coeff =     c(2)#, 50) #adjusts the overall region above d_threshold in distance raster
 
-d_max_range = c(3, 6, 12)
+d_max_range = c(3)#, 6, 12)
 
-worst_case =  c(0.75, 0.9) #estimated maximum yearly saturation % of infection among S
+worst_case =  c(0.75)#, 0.9) #estimated maximum yearly saturation % of infection among S
 
 #non-tuned params:
 d_threshold = 0.01 #value at which we would like to round to 0, to prevent global infection
@@ -428,27 +429,15 @@ for (trial in split(params, seq(nrow(params)))) {
 ```
 
 
-spatial autocorrelation in the fact that outbreaks are considered based on distance from the pixel, and that there is s.ac. in the density/count data
-
-- this does not account for migration in/out of cities as a result of population loss
-- areas of population growth not accounted for.
-- balkans not accurate at all for some reason; some other factor?
-
-- does not account for saturation of popd. as a proxy for contacts (heat equation in that papper)
-
-
 ### Deterministic Model Results
 
-  Despite its relative simplicity, the deterministic models perform extremely well on this data. With a very strong correlation coefficient between the submodel-estimated population and that estimated by the HYDE, we can be fairly confident that at least against the HYDE 3.2 data, predictions are fairly accurate. The death submodel estimation, while slightly less correlated with the HYDE prediction, is still decently accurate. However, the system's overreliance on self-verification using those estimates is also a significant weakness of the system; in the future, it would be prudent to test against other estimates of population and population decline, even simply testing the population of cities against what is reported by other historical sources. Furthermore, it would be prudent to test far more parameter sets than are tested here, however due to the exponentially-increasing compute time that grid search consumes as parameters are added, in the interest of time, the current parameter set provides a reasonable enough fit.
+  Despite its relative simplicity, the deterministic models perform extremely well on this data. With a very strong correlation coefficient between the submodel-estimated population and that estimated by the HYDE, we can be fairly confident that at least against the HYDE 3.2 data, predictions are fairly accurate. The death submodel estimation, while slightly less correlated with the HYDE prediction, is still decently accurate. However, the system's overreliance on self-verification using those estimates is also a significant weakness of the system; in the future, it would be prudent to test against other estimates of population and population decline, even simply testing the population of cities against what is reported by other historical sources. Any inaccuracy in the initial population or density, for example, could lead to sweeping inaccuracies in the predicted results.
   
-  Additionally, it is interesting that the preferred set of hyperparameters differs between the population count and deaths. This may also be the result of a dearth of adequate parameters in the system. Because deaths and surviving population are two sides of the same coin, linked mathematically through the system of equations $A = R + S, R = I - D, D = mortality \times I$, it seems fairly intuitive that adding at the very least a hyperparameter for $mortality$ instead of having it as a constant value would likely help to remedy this issue. Furthermore, some plague models [@Dean.etalHumanEctoparasitesSpread2018; @Sichone.etalEstimatingBasicReproduction2020; Nguyen.etal2017PlagueOutbreak2018] add differing mortality and infection rates for various forms of the disease, as well as the capability to transition between these states. Factoring that information in would certainly would be a key step towards more accurate and realistic modelling. Unfortunately, doing so would preclude the continued usage of grid search to tune the parameters, as it would necessitate the addition of a huge swathe of new hyperparameters, likely skyrocketing the required computational time for this method far, far into the realm of infeasability.
+  It is interesting that the preferred set of hyperparameters differs between the population count and deaths. This may also be the result of a dearth of adequate parameters in the system. Because deaths and surviving population are two sides of the same coin, linked mathematically through the system of equations $A = R + S, R = I - D, D = mortality \times I$, it seems fairly intuitive that adding at the very least a hyperparameter for $mortality$ instead of having it as a constant value would likely help to remedy this issue. Furthermore, some plague models [@Dean.etalHumanEctoparasitesSpread2018; @Sichone.etalEstimatingBasicReproduction2020; Nguyen.etal2017PlagueOutbreak2018] add differing mortality and infection rates for various forms of the disease, as well as the capability to transition between these states. Factoring that information in would certainly would be a key step towards more accurate and realistic modelling. Unfortunately, doing so would preclude the continued usage of grid search to tune the parameters, as it would necessitate the addition of a huge swathe of new hyperparameters, likely skyrocketing the required computational time for this method far, far into the realm of infeasability.
   
   As population increases, both correlation plots seem to diverge into two pathways, one in which my estimates are too high, and one in which they are too low. This seems to indicate that the current set of parameters this system applies to the data is not adequate, and that there are other factors which are unaccounted for. Because the largest factor influencing the magnitude of infections in any given cell is population density, and because this effect seems to intensify as the magnitude of the prediction increases, modifying the effect or values of the yearly $dens_{rast}$ may be dampen this divergence. Indeed, in this system $dens_{rast}$ is considered fairly directly as a proxy for the number of contacts between individuals (the crucial factor in how many individuals one person may infect). This may not be a valid assumption to make, and instead first predicting the frequency and magnitude of contacts _using_ the $dens_{rast}$ as performed by Hu et al. @Hu.etalScalingContactRates2013 (or perhaps even a slightly simpler model) may lead to far more precise predictions.
   
-  Given the relative accuracy of the models, especially in higher-density areas, attention must be drawn instead to areas where the models lack accuracy. Ireland, Brittany, and particularly Southeastern Europe are all lacking some of the definition present in the HYDE 3.2 estimates. The deaths submodel in particular seems to have an excessively light hand in some rural areas. guesses: more complicated than just "max saturation", complicated not-just-distance relationship between urban/rural, likesaytradelol
-
-- note the implications behind the parameters which were successful, esp. that worst_case.
-- note that some parameters are useless and still more parameters are likely necessary to get higher accuracy
+  Given the relative accuracy of the models, especially in higher-density areas, attention must be drawn instead to areas where the models lack accuracy. Ireland, Brittany, and particularly Southeastern Europe are all lacking some of the definition present in the HYDE 3.2 estimates. The deaths submodel in particular seems to have an excessively light hand in some rural areas, and an excessively heavy hand in some urban areas. While the latter point in particular may be explained easily by migration, all three points together suggest that there is an even larger current underlying issue. The most obvious conclusion would be that the relationship between the magnitude of infection in a cell depends on additional factors more complicated than simple $scalar\times{density}\times{distance}$. Some outliers, such as the grossly under-predicted point in Figure \@ref(fig:top_correlation_chart_A) also suggest that the formula for $I$ is inadequate, and that a wider range of parameters encapsulating socioeconomic phenomenon such as the relationships between urban centers, and between these urban centers and their rural surroundings. Of course, as this data models the real world, and the potential that crucial data is lost to time, perfect accuracy may of course be a futile pursuit.
 
 
 ```{r top_correlation_chart_A, echo=FALSE, out.height='80%', fig.cap='Most Correlated Population Model Estimated vs. Actual Plot'}
